# abb_libegm

./: .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
python/: _CMakeLists.txt
python/examples/: simple_controller.py
python/tests/: test_egm.py
src/: bindings.cpp  common.cpp  controller.cpp  egm_udp_server.cpp  udp.cpp
src/abb_libegm/: __init__.py
